Fixed some z-indexes

--- a/css/notes.css
+++ b/css/notes.css
@@ -8,6 +8,7 @@
 	transition: transform 0.3s ease-in-out;
 	display: flex;
 	flex-direction: column;
+	z-index: 1;
 }
 
 .notes__hidden {
